# django-cloudflare

./: .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
django_cloudflare/: __init__.py  constants.py
docs/: changelog.md  index.md  quickstart.md  settings.md
docs/source/: changelog.rst  conf.py  index.rst  quickstart.rst  settings.rst
testproject/: settings.py  urls.py  wsgi.py
tests/: test_middleware.py
