[project]
name = "django-cloudflare"
version = "1.0.0"
description = "A middleware for Django applications using Cloudflare as a proxy. Allows you to extract and access CF headers."
authors = [
    { name = "Tom Wojcik", email = "django-cloudflare-pkg@tomwojcik.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["django", "cloudflare"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
]
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/tomwojcik/django-cloudflare"
Repository = "https://github.com/tomwojcik/django-cloudflare"
Documentation = "https://django-cloudflare.readthedocs.io/"
Issues = "https://github.com/tomwojcik/django-cloudflare/issues"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "pre-commit>=4",
]
docs = [
    "mkdocs-material>=9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testproject.settings"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=django_cloudflare --cov-report=term-missing --cov-fail-under=100"
